@@ -86,7 +86,7 @@ schema = Schema((
             label_msgid='indicators_label_dataset_path',
             i18n_domain='indicators',
         ),
-        required=True,
+        required=False,
         default_content_type="text/html",
         default_output_type="text/x-html-safe",
     ),
@@ -136,15 +136,14 @@ schema = Schema((
     TextField(
         name='description',
         widget=RichWidget(
-            label="Entities description",
+            label="Description",
             label_msgid='indicators_label_description',
             i18n_domain='indicators',
             description=" ",
         ),
         default_content_type="text/html",
         searchable=True,
-        required=True,
-        required_for_published="True",
+        required=False,
         allowable_content_types=('text/plain', 'text/structured',
             'text/html', 'application/msword',),
         default_output_type="text/x-html-safe",
